# money-insight

./: .gitignore  CLAUDE.md  README.md  index.html  money-insight-app-schema.json  package-lock.json  package.json  pnpm-lock.yaml  prettierrc.json  tailwind.config.js  test-transactions.csv  turbo.json
.claude/: settings.local.json
apps/native/: index.html  package.json  vite.config.ts
apps/native/src/: App.tsx
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs  session.rs  shared_auth.rs  sync.rs  sync_table_map.rs  web_server.rs
apps/tauri/src-tauri/: Cargo.toml
apps/tauri/src-tauri/src/: database.rs  lib.rs  models.rs  shared_sync.rs  sync.rs
apps/web/: package.json  vite.config.ts
docs/: architecture.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
plans/reports/: docs-manager-260313-0221-money-insight-documentation.md
src/: App.tsx  index.css  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs  session.rs  web_server.rs
src/adapters/: ServiceFactory.ts  index.ts
src/adapters/interfaces/: IAccountService.ts  ICategoryService.ts  IStatisticsService.ts  ITransactionService.ts  index.ts
src/adapters/tauri/: TauriAccountAdapter.ts  TauriCategoryAdapter.ts  TauriStatisticsAdapter.ts  TauriTransactionAdapter.ts  index.ts
src/adapters/web/: HttpAccountAdapter.ts  HttpAdapter.ts  HttpCategoryAdapter.ts  HttpStatisticsAdapter.ts  HttpTransactionAdapter.ts  index.ts
src/components/: index.ts
src/components/atoms/: alert.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  index.ts  input.tsx  label.tsx  select.tsx  spinner.tsx  tabs.tsx
src/components/molecules/: DatePicker.tsx  DropZone.tsx  FormField.tsx  Navigation.tsx  Pagination.tsx  StatCard.tsx  TransactionItem.tsx  index.ts
src/components/organisms/: AddTransactionForm.tsx  BottleneckAlerts.tsx  CategoryPieChart.tsx  DateRangeFilter.tsx  DisconnectedOverlay.tsx  FileUpload.tsx  MonthlyReportSection.tsx  MonthlyTrendChart.tsx  TransactionDetailModal.tsx  TransactionList.tsx  TrendingReportChart.tsx  index.ts
src/components/templates/: AddTransactionPage.tsx  Dashboard.tsx  FileUploadSection.tsx  SettingsPage.tsx  index.ts
src/hooks/: index.ts  useServerConnection.ts
src/layouts/: RootLayout.tsx
src/lib/: analysis.ts  data-processing.ts  database-service.ts  utils.ts
src/pages/: AddTransactionPage.tsx  DashboardPage.tsx  InitialSetupPage.tsx  ReportsPage.tsx  SettingsPage.tsx  index.ts
src/stores/: spending-store.ts
src/types/: index.ts
src/utils/: platform.ts
