[package]
name = "money-insight"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "money_insight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Sync client library (uses reqwest internally)
qm-sync-client = { version = "0.1.0", features = ["reqwest-client"] }

# HTTP client for auth service
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Environment variable loading
dotenvy = "0.15"

# Encryption for secure token storage
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"
sha2 = "0.10"

# JWT token validation
jsonwebtoken = "9"

# Web server for browser mode
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = "8"
rand = "0.8"
hex = "0.4"
futures-util = "0.3"
mime_guess = "2"

# Machine ID for encryption key derivation (desktop only)
[target.'cfg(not(target_os = "android"))'.dependencies]
machine-uid = "0.5"

[workspace]